--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,6 +6,12 @@
     "baseUrl": ".",
     "paths": {
       "@web/*": ["./src/*"]
-    }
+    },
+    "allowJs": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   }
 }
