--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,11 +16,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "expo": "~47.0.12",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "moti": "^0.21.0",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
@@ -33,7 +39,9 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-root-import": "^6.6.0",
     "eslint-config-custom": "workspace:*",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "^18.2.0",
+    "tailwind-config-custom": "workspace:*",
     "tsconfig": "workspace:*"
   }
 }
