--- a/packages/eslint-config-custom/.eslintrc.json
+++ b/packages/eslint-config-custom/.eslintrc.json
@@ -32,6 +32,7 @@
     "semi": ["warn", "always"],
     "arrow-parens": ["warn", "always"],
     "no-unused-vars": ["warn", { "args": "none" }],
+    "prefer-const": "error",
     "no-console": [
       "warn",
       {
