--- a/packages/tailwind-config-custom/package.json
+++ b/packages/tailwind-config-custom/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "main": "tailwind.config.js",
   "types": "index.d.ts",
+  "files": [
+    "tailwind.config.js"
+  ],
   "devDependencies": {
     "tailwindcss": "^3.2.4"
   }
