--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,6 +22,7 @@
     "expo-status-bar": "~1.4.2",
     "moti": "^0.21.0",
     "nativewind": "^2.0.11",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -41,7 +42,7 @@
     "eslint-config-custom": "workspace:*",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "^18.2.0",
-    "tailwind-config-custom": "workspace:*",
+    "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*"
   }
 }
