--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,7 @@
     "eslint-config-custom": "workspace:*",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.21",
-    "tailwind-config-custom": "workspace:*",
+    "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*"
   }
 }
