refactor(server): migrate from fastify to nest

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/fastify.json",
+  "extends": "tsconfig/nest.json",
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": ".",
