--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,34 +3,46 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "tsup src",
     "predev": "prisma generate",
-    "dev": "tsx watch src/server.ts",
-    "start:prod": "node dist/server.js",
-    "format": "prettier --write \"**/*.{js,json,ts,tsx,md}\"",
-    "lint": "eslint \"{src,test}/*.ts\" --fix",
+    "dev": "nest start --watch",
+    "build": "nest build",
+    "start": "nest start",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "format": "prettier --write \"**/*.{json,ts}\"",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.config.ts",
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@fastify/cors": "^8.2.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.11.0"
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@types/express": "^4.17.13",
     "@types/node": "18.11.18",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.11",
     "eslint-config-custom": "workspace:*",
     "prisma": "^4.9.0",
     "prisma-erd-generator": "^1.2.5",
-    "supertest": "^6.3.3",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-loader": "^9.2.3",
     "tsconfig": "workspace:*",
-    "tsconfig-paths": "4.1.2",
-    "tsup": "^6.5.0",
+    "tsconfig-paths": "4.1.1",
     "tsx": "^3.12.2"
   }
 }
