--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,12 +11,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "clsx": "^1.2.1",
     "next": "12.3.0",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^1.8.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
