--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@hookform/resolvers": "^2.9.10",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "axios-config": "workspace:*",
     "clsx": "^1.2.1",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
@@ -28,6 +30,7 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.42.1",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
