--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@hookform/resolvers": "^2.9.10",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@tanstack/react-query": "^4.22.4",
     "axios-config": "workspace:*",
     "clsx": "^1.2.1",
     "expo": "~47.0.12",
