--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.2.1",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "moti": "^0.21.0",
     "nativewind": "^2.0.11",
