--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^18.0.7",
     "@types/testing-library__jest-dom": "^5.14.5",
     "autoprefixer": "^10.4.13",
+    "axios-mock-adapter": "^1.21.2",
     "concurrently": "^7.6.0",
     "eslint-config-custom": "workspace:*",
     "jest-environment-jsdom": "^29.3.1",
