--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.0.3",
     "@radix-ui/react-progress": "^1.0.1",
     "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-toast": "^1.1.2",
     "@tanstack/react-query": "^4.22.4",
     "axios-config": "workspace:*",
     "clsx": "^1.2.1",
